fix the mobile overflow issue

--- a/app/styles/_photo-upload.scss
+++ b/app/styles/_photo-upload.scss
@@ -6,6 +6,7 @@
   .photo-upload-content {
     @extend .maximum;
 
+    overflow: hidden;
     max-width: 721px;
     margin: 0 auto;
     text-align: center;
